# plugin-kit-ai

./: .gitignore  .goreleaser.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.mod  go.work  go.work.sum  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/: dependabot.yml  dependency-review-config.yml  pull_request_template.md
composables/: useBrowserTheme.ts  useDocsLinks.ts  usePageSeo.ts  useParallaxSections.ts  useReleaseDownloads.ts
content/: en.json  ru.json
data/: content.ts  faq.ts  features.ts
docs/: ARCHITECTURE.md  CHOOSING_HELPER_DELIVERY_MODE.md  CODEX_TARGET_BOUNDARY.md  CURSOR_OPENCODE_PARITY_AUDIT.md  CURSOR_WORKSPACE_LANE_PLAN.md  DIAGNOSTICS.md  EXECUTABLE_ABI.md  FOUNDATION_REWRITE_VNEXT.md  GEMINI_RUNTIME_AUDIT.md  INSTALL_COMPATIBILITY.md  INTERPRETED_STABLE_SUBSET_AUDIT.md  MCP_PORTABLE_STANDARD.md  MIGRATIONS.md  OPENCODE_STABLE_PROMOTION_AUDIT.md  OPENCODE_TOOLS_BETA_AUDIT.md  PLUGIN_STANDARD_AND_PUBLISH_PLAN.md  PLUGIN_YAML_V1_SPEC.md  PRODUCTION.md  PUBLICATION_DOCTOR_JSON_CONTRACT.md  PUBLICATION_JSON_CONTRACT.md  PUBLISH_JSON_CONTRACT.md  PUBLISH_LAYER_SPEC.md  README.md  REHEARSAL_TEMPLATE.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  SKILLS.md  STATUS.md  SUPPORT.md  THREAT_MODEL.md  UNIFICATION_NOTES.md  UNIVERSAL_INSTALL_UPDATE_CONTROL_PLANE_IMPLEMENTATION_RFC_V1.md  UNIVERSAL_INSTALL_UPDATE_CONTROL_PLANE_PLAN.md  V0_9_AUDIT.md  V1_0_X_HARDENING.md  VALIDATE_JSON_CONTRACT.md
landing/: eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
locales/: en.json  ru.json
maintainer-docs/: MCP_PORTABLE_STANDARD.md  PRODUCTION.md  SUPPORT.md  V0_9_AUDIT.md  V1_0_X_HARDENING.md
my-plugin/: README.md  go.mod  launcher.yaml  plugin.yaml
python/plugin-kit-ai/: README.md  pyproject.toml
python/plugin-kit-ai-runtime/: README.md  pyproject.toml
python/plugin-kit-ai-runtime/src/plugin_kit_ai_runtime/: __init__.py
python/plugin-kit-ai/src/plugin_kit_ai/: __init__.py  cli.py  install.py  platform.py
repotests/: README.md  atlassian_catalog_live_e2e_test.go  chrome_devtools_catalog_live_e2e_test.go  claude_cli_hooks_e2e_test.go  claude_hooks_e2e_test.go  (+68 more)
(+1956 files in other folders)
