[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plugin-kit-ai"
description = "Thin Python launcher for the plugin-kit-ai CLI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "plugin-kit-ai" }]
dynamic = ["version"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
]

[project.scripts]
plugin-kit-ai = "plugin_kit_ai.cli:main"

[project.urls]
Homepage = "https://github.com/777genius/plugin-kit-ai"
Repository = "https://github.com/777genius/plugin-kit-ai"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "plugin_kit_ai.__version__" }
